Updating changes via script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "AddonCompartmentFrame",
         "BACKDROP_SLIDER_8_8",
         "TooltipBackdropTemplateMixin",
-        "NineSlicePanelMixin"
+        "NineSlicePanelMixin",
+        "Add"
     ]
 }
